# localization

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/localization_system/lib/localization_system/: gps_driver  imu_driver
install/localization_system/share/localization_system/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/localization_system/share/localization_system/cmake/: localization_systemConfig.cmake
install/localization_system/share/localization_system/config/: ekf.yaml
install/localization_system/share/localization_system/launch/: localization.launch.py
launch/: localization_with_bridge.launch.py
log/: latest_build
src/launch/: localization_with_bridge.launch.py
src/localization_system/: CMakeLists.txt  package.xml
src/localization_system/config/: ekf.yaml  localization_params.yaml  ukf.yaml
src/localization_system/launch/: localization.launch.py
src/localization_system/src/: gps_driver.cpp  imu_driver.cpp  serial_port.hpp
src/localization_system/srv/: CalibrateImu.srv
src/motor_control/: CMakeLists.txt  package.xml
src/motor_control/config/: motor_control_params.yaml
src/motor_control/src/: can_motor_node.cpp  pure_pursuit_node.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/config/: path_planner_params.yaml
src/path_planner/src/: path_planner_node.cpp
src/path_planner/srv/: GeneratePath.srv  LoadPath.srv  RecordVertex.srv  SavePath.srv
src/tractor_bringup/: CMakeLists.txt  package.xml
src/tractor_bringup/launch/: localization_with_bridge.launch.py
