<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization_system</name>
  <version>0.0.0</version>
  <description>Localization system using GPS and IMU</description>
  <maintainer email="tractor@todo.todo">tractor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
